# csvLoader

./: README.md  csv_loader.cabal  groups  project.config
SRC/: CsvLoader.hs
SRC/App/: MyIO.hs  Searcher.hs
