Name:                csvLoader
Version:             1.0
Description:         csv ftp loader 
License:             GPL
Author:              Evgene Oskin
Build-Type:          Simple
Cabal-Version:       >=1.2
Executable csvLoader
  Main-is:           SRC/CsvLoader.hs
  Build-Depends:     filepath, directory, regex-posix, old-locale, split, time, ftphs, base >= 3 && < 5